get rid of maven1 instructions